--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node genApiData.js && next build",
+    "build": "redocly build-docs public/openapi.yaml --output=public/api.html && node genApiData.js && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@redocly/cli": "^1.27.2",
     "@types/pdfjs-dist": "^2.10.378",
     "next": "15.1.3",
     "pdfjs-dist": "^4.10.38",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
