--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@redocly/cli": "^1.27.2",
     "@types/pdfjs-dist": "^2.10.378",
-    "next": "15.1.3",
+    "next": "^15.4.6",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
